# laptrack

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  LICENSE.rst  README.rst  asv.conf.json  codecov.yml  cost_matrix.csv  install_local.sh  mypy.ini  noxfile.py  paper.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  constraints.txt  labeler.yml  release.yml  tests.yml
benchmarks/: __init__.py  baseline.csv  bench_tracking.py  benchmark_linking.py
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
docs/examples/: 3D_tracking.ipynb  README.md  api_example.ipynb  bright_spots.ipynb  cell_segmentation.ipynb  custom_metric.ipynb  file_export.ipynb  file_import_export.ipynb  multi-core_example.ipynb  napari_interactive_fix.ipynb  overlap_tracking.ipynb  requirements.txt  running_command_line.ipynb  sample_data.csv  segmentation.ipynb
docs/examples/3D_tracking_data/: README.md
docs/examples/cell_segmentation_data/: README.md
docs/examples/command_line_data/: metadata.json  regionprops.csv  save_data.ipynb
docs/examples/command_line_data/images.zarr/: zarr.json
docs/examples/command_line_data/images.zarr/image/c/0/0/: 0
docs/examples/command_line_data/images.zarr/image/c/1/0/: 0
docs/examples/command_line_data/images.zarr/labels/: zarr.json
docs/examples/command_line_data/images.zarr/labels/c/0/0/: 0
docs/examples/command_line_data/images.zarr/labels/c/1/0/: 0
docs/examples/napari_interactive_fix_data/: camera_state.json  note.md
docs/examples/overlap_tracking_data/: generate_data.py  labels.npy
docs/examples/segmentation_data/: data_small.npz
examples/: api_example.py  benchmarking.py  brownian_motion_tracking.py  data.py  example_3D_Fluo-N3DH-CE_3D.py  example_cellpose_Fluo-C2DL-Huh7.py  lap_tracking_example.py  napari_example.py  napari_interactive_example.ipynb  napari_interactive_example.py  napari_interactive_example_requirements.txt
examples/bright_spots/: bright_spots.ipynb
examples/bright_spots/data/: brownian_particles_images_with_noise_small.npz  generate_data.py
examples/interactive_example_data/: demo_image.tif  demo_image_label.tif  example_images.tif  labels.npy  labels2.npy  labels3.npy  manual_corrected.npy  note.md
examples/napari_interactive_fix/: napari_interactive_fix.ipynb  requirements.txt
examples/napari_interactive_fix/interactive_example_data/: example_label.tif
examples/segmentation/: segmentation.ipynb
examples/segmentation/data/: organize_data.py
misc/: generate_test_data.py  rescale_HL60_3D_synthesized_data.py
src/laptrack/: __init__.py  __main__.py  _coo_matrix_builder.py  _cost_matrix.py  _optimization.py  _overlap_tracking.py  _tracking.py  _tracking_result.py  _typing_utils.py  _utils.py  data.py  data_conversion.py  datasets.py  metric_utils.py  scores.py  tracking.py  tracksdata_solver.py  utils.py
tests/: __init__.py  test_data_conversion.py  test_datasets.py  test_github_workflows.py  test_main.py  test_metric_utils.py  test_overlap_tracking.py  test_scores.py  test_tracking.py  test_tracking_result.py  test_tracking_routines.py  test_tracksdata_solver.py  test_utils.py
tests/data/: grouped_poss_molecule_tracking.npy  same_position_example.csv  test_spots.csv  trackmate_tracks_with_gap_closing.csv  trackmate_tracks_with_gap_closing.xml  trackmate_tracks_with_gap_closing_edges.csv  trackmate_tracks_with_gap_closing_spots.csv  trackmate_tracks_with_merging.csv  trackmate_tracks_with_merging.xml  trackmate_tracks_with_merging_edges.csv  trackmate_tracks_with_splitting.csv  trackmate_tracks_with_splitting.xml  trackmate_tracks_with_splitting_edges.csv  trackmate_tracks_with_splitting_merging.csv  trackmate_tracks_with_splitting_merging.xml  trackmate_tracks_with_splitting_merging_edges.csv  trackmate_tracks_with_splitting_merging_spots.csv  trackmate_tracks_with_splitting_spots.csv  trackmate_tracks_without_gap_closing.csv  trackmate_tracks_without_gap_closing.xml  trackmate_tracks_without_gap_closing_edges.csv
tests/data/notebook/: export_trackmate_tracks.ipynb  test_tracking_prototype.ipynb
