[tool.poetry]
name = "laptrack"
version = "0.17.0"
description = "LapTrack"
authors = ["Yohsuke Fukai <ysk@yfukai.net>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/yfukai/laptrack"
repository = "https://github.com/yfukai/laptrack"
documentation = "https://laptrack.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
]

[tool.poetry.urls]
Changelog = "https://github.com/yfukai/laptrack/releases"

[tool.poetry.dependencies]
python = "^3.10,<3.14"
click = "^8.0.1"
numpy = ">=1.26,<3.0.0"
scipy = "==1.14.1" # pin this version to avoid scipy bug
networkx = "^3.4.2"
pandas = ">=1.3.1,<3.0.0"
typing-extensions = "^4.1.0"
pydantic = "^2.0"
scikit-image = ">=0.24.0,<1.0.0"
pooch = "^1.6.0"
scikit-learn = "^1.5.0"

[tool.poetry.scripts]
laptrack = "laptrack.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
pytest-datadir = "^1.3.1"
coverage = {extras = ["toml"], version = "^6.2"}
safety = "^2.3.1"
mypy = "^1.5.1"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.1.0"}

matplotlib = ">=3.7.2"
sphinx = "6.2.1"
sphinx-autobuild = ">=2021.3.14"
sphinx-rtd-theme = ">=1.2.2"
sphinx-click = ">=5.0.1"
sphinx-gallery = ">=0.10"
sphinxcontrib-napoleon = ">=0.7"
nbsphinx = ">=0.8.9"
autodoc-pydantic = ">=1.9.0"

pygments = "^2.13.0"
ipykernel = ">=6.29.5"
notebook = ">=7.2.2"
xmltodict = "^0.13.0"
pre-commit = "^2.20.0"
nox = "^2024.10.9"
nox-poetry = "^1.2.0"
toml = "^0.10.2"

cryptography = ">=43.0.1"
virtualenv = ">=20.26.6"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["laptrack"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.8.4"]
build-backend = "poetry.core.masonry.api"
[tool.setuptools_scm]

[tool.poetry_bumpversion.file."src/laptrack/__init__.py"]
