[project]
name = "laptrack"
version = "0.17.1"
description = "LapTrack"
authors = [{ name = "Yohsuke Fukai", email = "ysk@yfukai.net" }]
license = { file = "LICENSE.rst" }
readme = "README.rst"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "click>=8.0.1",
    "numpy>=1.26,<3.0.0",
    "scipy>=1.14.1,!=1.15.*,<2.0.0", # allow 1.14.1 or >=1.16.0 to avoid scipy bug
    "networkx>=3.4.2",
    "pandas>=1.3.1,<4.0.0",
    "typing-extensions>=4.1.0,<5.0.0",
    "pydantic>=2.0,<3.0.0",
    "scikit-image>=0.24.0,<1.0.0",
    "pooch>=1.6.0",
    "scikit-learn>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yfukai/laptrack"
Repository = "https://github.com/yfukai/laptrack"
Documentation = "https://laptrack.readthedocs.io"
Changelog = "https://github.com/yfukai/laptrack/releases"

[project.optional-dependencies]
geff = ["geff>=1.1.4.1.1"]
all = ["geff>=1.1.4.1.1"]

[project.scripts]
laptrack = "laptrack.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-datadir>=1.8.0",
    "coverage[toml]>=7.13.4",
    "safety>=3.7.0",
    "mypy>=1.19.1",
    "ruff>=0.14.0",
    "typeguard>=4.4.4",
    "xdoctest[colors]>=1.3.0",
    "matplotlib>=3.10.8",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-click>=6.2.0",
    "sphinx-gallery>=0.20.0",
    "sphinxcontrib-napoleon>=0.7",
    "nbsphinx>=0.9.8",
    "autodoc-pydantic>=2.2.0",
    "pygments>=2.19.2",
    "ipykernel>=7.2.0",
    "notebook>=7.5.3",
    "xmltodict>=1.0.2",
    "pre-commit>=4.5.1",
    "nox>=2026.2.9",
    "toml>=0.10.2",
    "cryptography>=46.0.4",
    "virtualenv>=20.36.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["laptrack"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E266", "E501", "E713", "E714", "E741", "F841"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["E402"]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laptrack"]
